--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "1-1-1.C": "cpp"
-  }
+  },
+
+  // ✅ Tailwind CSS 관련 경고 제거 설정
+  "css.lint.unknownAtRules": "ignore"
 }
