--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,9 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "1-1-1.C": "cpp"
+    "1-1-1.C": "cpp",
+    "1048.C": "cpp",
+    "1049.C": "cpp"
   },
 
   // ✅ Tailwind CSS 관련 경고 제거 설정
