--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,9 @@
   "files.associations": {
     "1-1-1.C": "cpp",
     "1048.C": "cpp",
-    "1049.C": "cpp"
+    "1049.C": "cpp",
+    "1050.C": "cpp",
+    "1051.C": "cpp"
   },
 
   // ✅ Tailwind CSS 관련 경고 제거 설정
