--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,8 @@
     "1048.C": "cpp",
     "1049.C": "cpp",
     "1050.C": "cpp",
-    "1051.C": "cpp"
+    "1051.C": "cpp",
+    "1052.C": "cpp"
   },
 
   // ✅ Tailwind CSS 관련 경고 제거 설정
