--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,12 @@
     "1049.C": "cpp",
     "1050.C": "cpp",
     "1051.C": "cpp",
-    "1052.C": "cpp"
+    "1052.C": "cpp",
+    "1053.C": "cpp",
+    "1054.C": "cpp",
+    "1055.C": "cpp",
+    "1056.C": "cpp",
+    "1057.C": "cpp"
   },
 
   // ✅ Tailwind CSS 관련 경고 제거 설정
