--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,8 @@
     "1054.C": "cpp",
     "1055.C": "cpp",
     "1056.C": "cpp",
-    "1057.C": "cpp"
+    "1057.C": "cpp",
+    "1090.C": "cpp"
   },
 
   // ✅ Tailwind CSS 관련 경고 제거 설정
