--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,8 @@
     "1056.C": "cpp",
     "1057.C": "cpp",
     "1090.C": "cpp",
-    "1212.C": "cpp"
+    "1212.C": "cpp",
+    "stdio.h": "c"
   },
 
   // ✅ Tailwind CSS 관련 경고 제거 설정
