--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,8 @@
     "1212.C": "cpp",
     "stdio.h": "c",
     "2693.C": "cpp",
-    "10872.C": "cpp"
+    "10872.C": "cpp",
+    "1-1.C": "cpp"
   },
 
   // ✅ Tailwind CSS 관련 경고 제거 설정
